AUT-5604: Add scope and subject ID validation to handler
- Validate access token subject matches publicSubjectId path param
  using SubjectIdAuthorizerHelper
- Validate access token contains account-delete scope using
  ScopeAuthorizerHelper
- Return HTTP 403 with UNAUTHORIZED_REQUEST error if either check
  fails